RESOLVED FIXED 254972
Fix memory leaks introduced by 262558@main
https://bugs.webkit.org/show_bug.cgi?id=254972
Summary Fix memory leaks introduced by 262558@main
Alex Christensen
Reported 2023-04-03 22:39:55 PDT
...
Attachments
Alex Christensen
Comment 1 2023-04-03 22:42:01 PDT
EWS
Comment 2 2023-04-04 13:44:27 PDT
Committed 262587@main (cef6385b4d4e): <https://commits.webkit.org/262587@main> Reviewed commits have been landed. Closing PR #12363 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2023-04-04 13:45:35 PDT
Note You need to log in before you can comment on or make changes to this bug.