Fix memory leaks introduced by 262558@main https://bugs.webkit.org/show_bug.cgi?id=254972

Reviewed by Tim Horton.

Simon pointed out some memory leaks.  Obvious in hindsight.

* Source/WebKit/Shared/Cocoa/ArgumentCodersCocoa.mm:
(-[WKSecureCodingArchivingDelegate archiver:willEncodeObject:]):

Canonical link: https://commits.webkit.org/262587@main